Update generated files
Signed-off-by: James Munnelly <james@munnelly.eu>

--- a/deploy/crds/crd-certificaterequests.yaml
+++ b/deploy/crds/crd-certificaterequests.yaml
@@ -78,7 +78,7 @@ spec:
         metadata:
           type: object
         spec:
-          description: CertificateRequestSpec defines the desired state of CertificateRequest
+          description: Desired state of the CertificateRequest resource.
           type: object
           required:
           - csr
@@ -89,11 +89,12 @@ spec:
               type: string
               format: byte
             duration:
-              description: Requested certificate default Duration
+              description: The requested 'duration' (i.e. lifetime) of the Certificate.
+                This option may be ignored/overridden by some issuer types.
               type: string
             isCA:
-              description: IsCA will mark the resulting certificate as valid for signing.
-                This implies that the 'cert sign' usage is set
+              description: IsCA will mark this Certificate as valid for signing. This
+                will automatically add the `cert sign` usage to the list of `usages`.
               type: boolean
             issuerRef:
               description: IssuerRef is a reference to the issuer for this CertificateRequest.  If
@@ -108,15 +109,18 @@ spec:
               - name
               properties:
                 group:
+                  description: Group of the resource being referred to.
                   type: string
                 kind:
+                  description: Kind of the resource being referred to.
                   type: string
                 name:
+                  description: Name of the resource being referred to.
                   type: string
             usages:
-              description: Usages is the set of x509 actions that are enabled for
-                a given key. Defaults are ('digital signature', 'key encipherment')
-                if empty
+              description: Usages is the set of x509 usages that are requested for
+                the certificate. Defaults to `digital signature` and `key encipherment`
+                if not specified.
               type: array
               items:
                 description: 'KeyUsage specifies valid usage contexts for keys. See:
@@ -154,13 +158,13 @@ spec:
                 - microsoft sgc
                 - netscape sgc
         status:
-          description: CertificateStatus defines the observed state of CertificateRequest
-            and resulting signed certificate.
+          description: Status of the CertificateRequest, set and managed automatically.
           type: object
           properties:
             ca:
               description: Byte slice containing the PEM encoded certificate authority
-                of the signed certificate.
+                of the signed certificate. If not specified, the CA is assumed to
+                be unknown/not available.
               type: string
               format: byte
             certificate:
@@ -169,6 +173,8 @@ spec:
               type: string
               format: byte
             conditions:
+              description: List of status conditions to indicate the status of a CertificateRequest.
+                Known condition types are `Ready` and `InvalidRequest`.
               type: array
               items:
                 description: CertificateRequestCondition contains condition information
@@ -200,7 +206,8 @@ spec:
                     - "False"
                     - Unknown
                   type:
-                    description: Type of the condition, currently ('Ready', 'InvalidRequest').
+                    description: Type of the condition, known values are ('Ready',
+                      'InvalidRequest').
                     type: string
             failureTime:
               description: FailureTime stores the time that this CertificateRequest
