--- a/deploy/crds/crd-certificates.yaml
+++ b/deploy/crds/crd-certificates.yaml
@@ -900,36 +900,6 @@ spec:
                   name:
                     description: Name of the resource being referred to.
                     type: string
-              keyAlgorithm:
-                description: KeyAlgorithm is the private key algorithm of the corresponding
-                  private key for this certificate. If provided, allowed values are
-                  either "rsa" or "ecdsa" If `keyAlgorithm` is specified and `keySize`
-                  is not provided, key size of 256 will be used for "ecdsa" key algorithm
-                  and key size of 2048 will be used for "rsa" key algorithm.
-                type: string
-                enum:
-                - rsa
-                - ecdsa
-              keyEncoding:
-                description: KeyEncoding is the private key cryptography standards
-                  (PKCS) for this certificate's private key to be encoded in. If provided,
-                  allowed values are "pkcs1" and "pkcs8" standing for PKCS#1 and PKCS#8,
-                  respectively. If KeyEncoding is not specified, then PKCS#1 will
-                  be used by default.
-                type: string
-                enum:
-                - pkcs1
-                - pkcs8
-              keySize:
-                description: KeySize is the key bit size of the corresponding private
-                  key for this certificate. If `keyAlgorithm` is set to `RSA`, valid
-                  values are `2048`, `4096` or `8192`, and will default to `2048`
-                  if not specified. If `keyAlgorithm` is set to `ECDSA`, valid values
-                  are `256`, `384` or `521`, and will default to `256` if not specified.
-                  No other values are allowed.
-                type: integer
-                maximum: 8192
-                minimum: 0
               keystores:
                 description: Keystores configures additional keystore output formats
                   stored in the `secretName` Secret resource.
@@ -1003,6 +973,26 @@ spec:
                 description: Options to control private keys used for the Certificate.
                 type: object
                 properties:
+                  algorithm:
+                    description: Algorithm is the private key algorithm of the corresponding
+                      private key for this certificate. If provided, allowed values
+                      are either "rsa" or "ecdsa" If `algorithm` is specified and
+                      `size` is not provided, key size of 256 will be used for "ecdsa"
+                      key algorithm and key size of 2048 will be used for "rsa" key
+                      algorithm.
+                    type: string
+                    enum:
+                    - rsa
+                    - ecdsa
+                  encoding:
+                    description: The private key cryptography standards (PKCS) encoding
+                      for this certificate's private key to be encoded in. If provided,
+                      allowed values are "pkcs1" and "pkcs8" standing for PKCS#1 and
+                      PKCS#8, respectively. Defaults to PKCS#1 if not specified.
+                    type: string
+                    enum:
+                    - pkcs1
+                    - pkcs8
                   rotationPolicy:
                     description: RotationPolicy controls how private keys should be
                       regenerated when a re-issuance is being processed. If set to
@@ -1014,6 +1004,16 @@ spec:
                       whenever a re-issuance occurs. Default is 'Never' for backward
                       compatibility.
                     type: string
+                  size:
+                    description: Size is the key bit size of the corresponding private
+                      key for this certificate. If `algorithm` is set to `RSA`, valid
+                      values are `2048`, `4096` or `8192`, and will default to `2048`
+                      if not specified. If `algorithm` is set to `ECDSA`, valid values
+                      are `256`, `384` or `521`, and will default to `256` if not
+                      specified. No other values are allowed.
+                    type: integer
+                    maximum: 8192
+                    minimum: 0
               renewBefore:
                 description: The amount of time before the currently issued certificate's
                   `notAfter` time that cert-manager will begin to attempt to renew
