--- a/deploy/crds/crd-clusterissuers.yaml
+++ b/deploy/crds/crd-clusterissuers.yaml
@@ -1835,6 +1835,12 @@ spec:
                       the TLS connection.
                     type: string
                     format: byte
+                  namespace:
+                    description: 'Name of the vault namespace. Namespaces is a set
+                      of features within Vault Enterprise that allows Vault environments
+                      to support Secure Multi-tenancy. e.g: "ns1" More about namespaces
+                      can be found here https://www.vaultproject.io/docs/enterprise/namespaces'
+                    type: string
                   path:
                     description: 'Path is the mount path of the Vault PKI backend''s
                       `sign` endpoint, e.g: "my_pki_mount/sign/my-role-name".'
@@ -3759,6 +3765,12 @@ spec:
                       the TLS connection.
                     type: string
                     format: byte
+                  namespace:
+                    description: 'Name of the vault namespace. Namespaces is a set
+                      of features within Vault Enterprise that allows Vault environments
+                      to support Secure Multi-tenancy. e.g: "ns1" More about namespaces
+                      can be found here https://www.vaultproject.io/docs/enterprise/namespaces'
+                    type: string
                   path:
                     description: 'Path is the mount path of the Vault PKI backend''s
                       `sign` endpoint, e.g: "my_pki_mount/sign/my-role-name".'
@@ -5685,6 +5697,12 @@ spec:
                       the TLS connection.
                     type: string
                     format: byte
+                  namespace:
+                    description: 'Name of the vault namespace. Namespaces is a set
+                      of features within Vault Enterprise that allows Vault environments
+                      to support Secure Multi-tenancy. e.g: "ns1" More about namespaces
+                      can be found here https://www.vaultproject.io/docs/enterprise/namespaces'
+                    type: string
                   path:
                     description: 'Path is the mount path of the Vault PKI backend''s
                       `sign` endpoint, e.g: "my_pki_mount/sign/my-role-name".'
